...
                    overflow = TextOverflow.Ellipsis,
                    maxLines = 1,
                    fontWeight = FontWeight.Bold,
                    fontSize = 18.sp,
                    lineHeight = 18.sp,
                    modifier = Modifier
                        .testTag("PageTitle")
                        .padding(start = onBackClick?.let { dimensionResource(R.dimen.padding_small) } ?: 0.dp)
                )
            }
            Row(
                horizontalArrangement = Arrangement.SpaceEvenly,
                verticalAlignment = Alignment.CenterVertically,
...
            ) {
                filters?.invoke()
                objectToolsBtn?.invoke(tracks.value)
            }
        }
        AnimatedVisibility(selectionMode) {
            SelectionToolbar(
                whileSelectedClick = {
                    if (tracks.value.size == selectedTracks.value.size)
                        listVm.clearSelection()
                    else listVm.selectList(tracks.value.map { it.internal.trackId }.toSet())
                },
                onCloseClick = { listVm.clearSelection() },
...
                )
            }
        }
        Divider()
        LazyColumn(
            modifier = Modifier
                .testTag("TrackList")
                .weight(.85f)
        ) {
            items(tracks.value) {
                TrackItem(
                    track = it,
                    onItemClick = {
...
                    modifier = Modifier.weight(.20f)
                )
            }
        }
        TransparentBtnWithContextMenu(
            painter = painterResource(R.drawable.more_horiz),
            contentDescription = "Track options",
            tint = MaterialTheme.colorScheme.primary,
            modifier = Modifier.size(dimensionResource(R.dimen.icon_small))
        ) { closeMenu ->
            CustomContextMenuBtn(
                onClick = {
                    onInfoClick()
...
