<resources>
    <string name="app_name">SoundBox</string>
    <string name="nothing_playing">No track playing</string>
    <string name="queue_page">Queue</string>
    <string name="clear_queue_title">Clear the queue?</string>
    <string name="scan_btn_label">Scan</string>
    <string name="toggle_auto_scan_label">Scan automatically</string>
    <string name="toggle_auto_scan_text">Automatically scan the storage for tracks when the app starts</string>
    <string name="settings_library_section">Song library</string>
    <string name="settings_playback_section">Playback</string>
    <string name="settings_page">Settings</string>
    <string name="plholder_search_tracks">Search a track</string>
    <string name="song_counter">songs</string>
    <string name="selection_counter">selected</string>
    <string name="song_info">Song info</string>
    <string name="playlist_add_label">Add to a playlist</string>
    <string name="playlist_remove_label">Remove from this playlist</string>
    <string name="queue_add_label">Add to queue</string>
    <string name="play_label">Play</string>
    <string name="plholder_search_albums">Search an album</string>
    <string name="tracks_page">All songs</string>
    <string name="genres_filters">Genres</string>
    <string name="plholder_search_playlists">Search a playlist</string>
    <string name="remove_dialog_text">Are you sure you want to remove %1$s from this playlist?</string>
    <string name="single_track">this track</string>
    <string name="multiple_tracks">the tracks</string>
    <string name="remove_dialog_title">Remove from playlist</string>
    <string name="rename_pl_label">Rename playlist</string>
    <string name="delete_pl_label">Delete playlist</string>
    <string name="add_dialog_btn_label">Add</string>
    <string name="new_pl_btn">New playlist</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_loop">Play next song</string>
    <string name="queue_loop">Repeat the same queue</string>
    <string name="track_loop">Repeat the same track</string>
    <string name="location">Location</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album_artist">Album artist</string>
    <string name="composer">Composer</string>
    <string name="genre">Genre</string>
    <string name="track_number">Track number</string>
    <string name="disc_number">Disc number</string>
    <string name="year">Year</string>
    <string name="duration">Duration</string>
    <string name="added_date">Date added to library</string>
    <string name="last_played_date">Date last played</string>
    <string name="never_date">Never</string>
    <string name="cancel_label">Cancel</string>
    <string name="plholder_name">Name</string>
    <string name="create_btn_label">Create</string>
    <string name="rename_btn_label">Rename</string>
    <string name="plholder_search">Search</string>
    <string name="auto_play_text">Start playback when app is started</string>
    <string name="plholder_search_artists">Search an artist</string>
    <string name="dequeue_label">Remove from queue</string>
    <string name="read_storage_denied">SoundBox needs to access files and media to work, you can go to your device settings and enable it for this app.</string>
    <string name="perm_denied_title">Permission Required</string>
</resources>