...
            BoxWithConstraints {
                Surface {
                    Column(
                        modifier = modifier
                            .heightIn(max = maxHeight - if (horizontalLayout) 50.dp else 70.dp)
                            .background(MaterialTheme.colorScheme.surfaceContainer)
                            .testTag("SongInfo")
                    ) {
                        Row(
                            verticalAlignment = Alignment.CenterVertically,
                            modifier = Modifier.padding(start = 16.dp, top = 16.dp, bottom = 16.dp)
                        ) {
                            Icon(
...
