...
            modifier = modifier
        )
        DropdownMenu(
            expanded = isContextMenuVisible,
            onDismissRequest = { isContextMenuVisible = false },
            content = { content({ isContextMenuVisible = false }) },
            modifier = Modifier.testTag("ContextMenu")
        )
    }
}
