...
        )
    }
    LaunchedEffect(filter) {
        listVm.setTrackSource(filter)
    }

    TrackList(
        listVm = listVm,
        dialogsVm = dialogsVm,
        navController = navController,
        listTitle = stringResource(R.string.tracks_page),
        filters = {
            TransparentBtnWithContextMenu(
...
